# arbr-control-plane

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  docker-compose.prod.yml  docker-compose.replicas.yml  docker-compose.yml  llms.txt  package-lock.json  package.json
.claude/skills/arbr-github-audit/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: base-branch-check.yml  ci.yml  codeql.yml  release.yml  security.yml
assets/brand/: BRAND.md
bench/: PLAN.md  README.md  aggregate.js  runner.js
bench/lib/: summarize.js
clients/cli/: CHANGELOG.md  LICENSE  README.md  package.json
clients/cli/fixtures/: sample.jsonl
clients/cli/src/: audit.js  remote.js  report.js  wrap.js  wrapAgents.js
clients/cli/test/: audit.test.js  remote.test.js  wrap.test.js  wrapAgents.test.js
clients/js/: CHANGELOG.md  README.md  index.d.ts  package.json
clients/js/src/: index.js
clients/js/test/: client.test.js  live.smoke.js
clients/python/: CHANGELOG.md  README.md  pyproject.toml
clients/python/src/arbr_client/: __init__.py  langchain.py
clients/python/tests/: live_smoke.py  test_client.py  test_langchain.py
docs/: api-reference.md  auth.md  budgets.md  competitive-analysis-portkey.md  configuration.md  demo-fixture.md  deployment-gcp.md  deployment.md  features.md  index.md  models.md  opentelemetry.md  operational-readiness.md  privacy.md  quickstart.md  routing.md  secret-manager.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/gateway/: native.md  observe-only-ingestion.md  openai-compat.md  overview.md  streaming.md
docs/integrations/: librechat.md  opencode.md
docs/providers/: anthropic.md  bedrock.md  deepseek.md  gemini.md  groq.md  litellm.md  moonshot.md  openai.md  overview.md  xai.md
docs/sdk/: js.md  python.md
ops/: backup.sh  deploy.sh  restore.sh
scripts/: deploy.sh
server/scripts/: bench-smoke.js  bootstrap-admin.js  classify-smoke.js  demo-fixture.js  import-smoke.js  latency-bench.js  maxtokens-smoke.js  production-compose-smoke.js  semantic-cache-smoke.js  smoke-router.js
server/src/: config.js  index.js
server/src/analytics/: aggregate.js
server/src/api/: adminAuth.js  adminRateLimit.js  auditLogger.js  authUtil.js  csrf.js  identity.js  rbac.js  routes.js
server/src/classify/: classifier.js
server/src/eval/: dataset.js  demoFixture.js  efficiency.js  judge.js  (+7 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  api.js  index.css
(+205 files in other folders)
